XWIKI-12792: Unable to copy/rename a terminal document as a non-terminal document - Added hidden input for the checkbox's unchecked state.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/refactoring_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/refactoring_macros.vm
@@ -76,6 +76,8 @@
       <input type="checkbox" name="terminal" value="true" #if ($sourcePageIsTerminal)checked="checked"#end/>
       $services.localization.render($options.label)
     </label>
+    ## Hidden input used to ensure that an unchecked terminal checkbox means non-terminal and that the default is not used by mistake.
+    <input type="hidden" name="terminal" value="false" />
     <span class="xHint">$services.localization.render($options.hint)</span>
   </dt>
 #end
