XWIKI-12798: Unable to import office documents * Fix the locators for the name and parent fields. * Fix type and format code
(cherry picked from commit 485554be6bed05a561e5bbb14f15a5c2f56fd879)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -103,7 +103,15 @@
       }])
     #if ($xwiki.exists($services.model.createDocumentReference('', 'XWiki', 'OfficeImporter')) && "$!services.officemanager.serverState" == 'Connected')
       ## TODO: handle this use case with an extension point
-      #set($discard = $options[0].options.add({ 'name': $services.localization.render('office.createForm.type.name'), 'value': 'office', 'description': $services.localization.render('office.createForm.type.description'), 'icon': 'file-word', 'data': {'type':'office'}}))
+      #set ($discard = $options[0].options.add({
+        'name': $services.localization.render('office.createForm.type.name'),
+        'value': 'office',
+        'description': $services.localization.render('office.createForm.type.description'),
+        'icon': 'file-word',
+        'data': {
+          'type':'office'
+        }
+      }))
     #end
     #if (!$availableTemplateProviders.isEmpty())
       #set ($templateOptions = [])
