--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
@@ -152,10 +152,23 @@
     #set ($discard = $xwiki.linkx.use($services.webjars.url('org.xwiki.platform:xwiki-platform-tree-webjar',
       'tree.min.css', {'evaluate': true}), {'type': 'text/css', 'rel': 'stylesheet'}))
     #set ($discard = $classNames.add('dropdown'))
-    #set ($openTo = $pathData.get($mathtool.sub($pathData.size(), 1)).reference)
+
+    ## Open the tree to an intermediary path element, showing its siblings and its children.
+    #set ($openToIndex = $index)
+    #if ($index == 0)
+      ## Open the tree to the last path element (e.g. when you click on the home icon).
+      #set ($openToIndex = $mathtool.sub($pathData.size(), 1))
+    #end
+    #set ($openTo = $pathData.get($openToIndex).reference)
+    #if ($openTo.type == 'SPACE' && !$services.parentchild.isParentChildMechanismEnabled())
+      ## The tree shows nested documents.
+      #set ($openTo = $services.model.resolveDocument('', 'default', $openTo))
+    #end
+    #set ($openToType = $openTo.type.toString().toLowerCase())
+    #set ($openToId = "$openToType:$services.model.serialize($openTo, 'default')")
+
     #set ($rootId = $NULL)
-    #if ($index > 0)
-      #set ($openTo = $pathData.get($index).reference)
+    #if ($index > 0 && $openTo.type != 'WIKI')
       #set ($root = $pathData.get($mathtool.sub($index, 1)).reference)
       #if ($root.type == 'ellipsis')
         #set ($root = $openTo.parent)
@@ -166,12 +179,11 @@
       #set ($rootType = $root.type.toString().toLowerCase())
       #set ($rootId = "$rootType:$services.model.serialize($root, 'default')")
     #end
-    #if ($openTo.type == 'SPACE' && !$services.parentchild.isParentChildMechanismEnabled())
-      ## The tree shows nested documents.
-      #set ($openTo = $services.model.resolveDocument('', 'default', $openTo))
-    #end
-    #set ($openToType = $openTo.type.toString().toLowerCase())
-    #set ($openToId = "$openToType:$services.model.serialize($openTo, 'default')")
+
+    ## Show the wiki nodes if the first path element is from a different wiki (e.g. the home icon points to the main
+    ## wiki while the last path element points to a document from a subwiki).
+    #set ($showWikis = $pathData.get(0).reference.extractReference('WIKI') != $openTo.extractReference('WIKI'))
+
     ## FIXME: The tree navigation must work on an empty wiki.
     ## FIXME: The tree navigation should take into account the current hierarchy mode.
     ## FIXME: Make sure the tree shows entities of type $root.type and $openTo.type
@@ -179,6 +191,7 @@
       'outputSyntax': 'plain',
       'root': $rootId,
       'showTranslations': $xwiki.isMultiLingual(),
+      'showWikis': $showWikis,
       'limit': 10
     })))
     #set ($treeToggle = "<span class='dropdown-toggle' data-toggle='dropdown'>" +
