XWIKI-12841: UI extension "org.xwiki.platform.topmenu.left" is not working correctly.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
@@ -37,6 +37,11 @@
     .dropdown-menu .divider {
       background-color: @navbar-default-border;
     }
+    .navbar-left {
+      float: left;
+      margin-left: @navbar-padding-horizontal;
+      margin-right: @navbar-padding-horizontal;
+    }
   }
 }
 
