XWIKI-12843: Add a parameter to force the display of the hidden documents in the document tree

--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-tree/xwiki-platform-index-tree-war/src/main/webapp/templates/documentTree_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-tree/xwiki-platform-index-tree-war/src/main/webapp/templates/documentTree_macros.vm
@@ -5,6 +5,7 @@
 ## Configuration options for the Document Tree.
 #set ($docTreeConfig = {
   'filterByClass': '',
+  'filterHiddenDocuments': true,
   'hierarchyMode': 'reference',
   'limit': 15,
   'root': '',
