--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
@@ -188,11 +188,12 @@
     ## FIXME: Make sure the tree shows entities of type $root.type and $openTo.type
     #set ($treeParams = {
       'class': 'breadcrumb-tree',
-      'root': $rootId,
+      'limit': 10,
+      'links': true,
       'openTo': $openToId,
+      'root': $rootId,
       'showTranslations': $xwiki.isMultiLingual(),
-      'showWikis': $showWikis,
-      'limit': 10
+      'showWikis': $showWikis
     })
     #set ($treeToggle = "<span class='dropdown-toggle' data-toggle='dropdown'>" +
       "$services.icon.renderHTML('caret-down')</span>")
