XWIKI-12835: Expose the tree widget and the document tree as Velocity macros * 'location-picker' CSS class is also used on the DL element that contains the modal so there's no need to duplicate it.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/locationPicker_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/locationPicker_macros.vm
@@ -148,7 +148,7 @@
 #end
 
 #macro (documentPickerModal $options)
-  <div class="location-picker modal fade" tabindex="-1" role="dialog" data-backdrop="static">
+  <div class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
