--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -556,7 +556,7 @@ extension.oldflavors=$oldFlavor.trim()
 #-# Note that this replaces the old xwiki.defaultservletpath property in the xwiki.cfg file.
 #-#
 #-# The default is:
-# url.standard.getEntityPathPrefix=bin
+# url.standard.entityPathPrefix=bin
 
 #-# [Since 5.3M1]
 #-# The action to take when a subwiki is not found (ie there's no wiki descriptor for it). Valid values are:
