--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -567,7 +567,7 @@ extension.oldflavors=$oldFlavor.trim()
 # url.standard.multiwiki.notFoundBehavior=redirect_to_main_wiki
 
 #-# [Since 7.2M1]
-#-# Whether the "view" action is omitted in URLs ()in order to have shorter URLs).
+#-# Whether the "view" action is omitted in URLs (in order to have shorter URLs).
 #-# Note that this replaces the old xwiki.showviewaction property in the xwiki.cfg file.
 #-#
 #-# The default is:
