--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/macros.vm
@@ -336,8 +336,11 @@
         'selectedTags': $selectedTags
       })
       #if ($hasTopFilters)
-        #set ($discard = $liveTableParams.put('filterNodes', ["$('$jsLiveTableId').down('.xwiki-livetable-display-filters')",
-          "$('${jsLiveTableId}-topfilters')"]))
+        #set ($cssLiveTableId = $escapetool.css($divid))
+        #set ($discard = $liveTableParams.put('filterNodes', [
+          "$escapetool.h$cssLiveTableId .xwiki-livetable-display-filters",
+          "${jsLiveTableId}-topfilters"
+        ]))
       #end
       #if ($hasPageSize && "$!pageSizeBounds" != '')
         #set ($discard = $liveTableParams.put('pageSizeBounds', $pageSizeBounds))
