--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -1507,8 +1507,10 @@ ${Msz}Mb##
         'selectedTags': $selectedTags
       })
       #if ($hasTopFilters)
-        #set ($discard = $liveTableParams.put('filterNodes', ["$('$divid').down('.xwiki-livetable-display-filters')",
-          "$('${divid}-topfilters')"]))
+        #set ($discard = $liveTableParams.put('filterNodes', [
+          "$escapetool.h$escapetool.css($divid) .xwiki-livetable-display-filters",
+          "${divid}-topfilters"
+        ]))
       #end
       #if ($hasPageSize && "$!pageSizeBounds" != '')
         #set ($discard = $liveTableParams.put('pageSizeBounds', $pageSizeBounds))
