--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -1597,8 +1597,10 @@ ${Msz}Mb##
       })
       #if ($hasTopFilters)
         // Specify the filter nodes using identifiers or CSS selectors.
-        #set ($discard = $liveTableParams.put('filterNodes', ["$escapetool.h$divid .xwiki-livetable-display-filters",
-          "${divid}-topfilters"]))
+        #set ($discard = $liveTableParams.put('filterNodes', [
+          "$escapetool.h$escapetool.css($divid) .xwiki-livetable-display-filters",
+          "${divid}-topfilters"
+        ]))
       #end
       #if ($hasPageSize && "$!pageSizeBounds" != '')
         #set ($discard = $liveTableParams.put('pageSizeBounds', $pageSizeBounds))
