XWIKI-12885: Add a way to disable the link on individual tree nodes * Add the 'jstree-no-link' CSS class for this purpose

--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/jstree/base.less
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/jstree/base.less
@@ -27,6 +27,20 @@
   }
 }
 
+.jstree-no-link {
+  &.jstree-anchor:focus {
+    outline: 0;
+  }
+  &.jstree-anchor,
+  &.jstree-anchor:link,
+  &.jstree-anchor:visited,
+  &.jstree-anchor:hover,
+  &.jstree-anchor:active {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
 // base jstree rtl
 .jstree-rtl {
 	.jstree-anchor { padding:0 1px 0 4px; }
