XWIKI-12901: Add ability to specify custom extension repositories in functional tests XWIKI-12884: No way to specify a webjars URL for a resource located in another wiki XWIKI-12878: Webjar installed by EM on a subwiki could not be loaded through the webjar action
Conflicts:
	xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/pom.xml

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -398,6 +398,11 @@ rendering.transformations = $xwikiRenderingTransformations
 #-# 
 #-# To not have any repository enabled (including disabling default repositories) you can explicitly make this list empty:
 # extension.repositories=
+#if ($xwikiExtensionRepositories)
+#foreach ($extensionRepository in $xwikiExtensionRepositories.split(','))
+extension.repositories=$extensionRepository
+#end
+#end
 
 #-# [Since 2.5]
 #-# The directory where extensions are stored after being downloaded.
